apps/frappe/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frappe
  labels:
    pod-security.kubernetes.io/enforce: baseline
