apps/frappe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frappe
  namespace: frappe
spec:
  selector:
    app: frappe
  ports:
    - name: web
      port: 8000
      targetPort: 8000
    - name: socketio
      port: 9000
      targetPort: 9000
